@@ -166,3 +166,4 @@ Revision	Log Message
 163		Fix parser bug (in setRHSObjList())
 164		Add blended option for population conversion
 165		Fix unmapped provinces error
+166		Use basetax and manpower proxies to try to break ties in culture conversion
